tests/nts_files/bad/no_label.nts
input n1
output o1

n1:1 o1:1
